# webpage-summarizer-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  package.json  pyproject.toml  tsconfig.json  wrangler.toml
.lsmcp/cache/: symbols.db
src/: extract.ts  gemini.ts  slack.ts  types.ts  worker.ts
